fix scrollbar zIndex

--- a/src/scrollbar/scroll.less
+++ b/src/scrollbar/scroll.less
@@ -24,6 +24,7 @@
     transition: background-color .2s linear, opacity .2s linear;
     background-color: transparent;
     opacity: 0.6;
+    z-index: 1000;
     &:hover{
         background-color: #eee;
         opacity: 0.9;
